# Object-Pose-Estimation

./: LICENSE  README.md
BuildModel/: CMakeLists.txt
BuildModel/include/: datagrabber.h  global.h  kinectgrabber.h  objectdetection.h  poseestimator.h  processingpcd.h  regmeshpcd.h  rosinterface.h
BuildModel/include/pcl/registration/: correspondence_estimation_mod.h  correspondence_rejection_color_appearance.h  default_convergence_criteria_mod.h  registration_mod.h
BuildModel/include/pcl/registration/impl/: correspondence_estimation_normal_shooting_weighted.hpp
BuildModel/src/: datagrabber.cpp  geometry.cpp  main.cpp  objectdetection.cpp  objectsegmentationplane.cpp  poseestimator.cpp  regmeshpcd.cpp  rosinterface.cpp
DetectAndLocalize/: CMakeLists.txt
DetectAndLocalize/3DModel/: brickModelAxisAlignedOrigin.vtk  drillModelAxisAlignedOrigin.pcd  drillNewModelAxisAlignedOrigin.vtk  randomModelAxisAlignedOrigin.pcd
DetectAndLocalize/include/: extractsurf.h  global.h  objectsegmentationplane.h  segmentationregiongrow.h
DetectAndLocalize/include/pcl/registration/: correspondence_estimation_normal_shooting_weighted.h  correspondence_rejection_mod.h  correspondence_rejection_self_occluded_normal.h  icp_mod.h  icp_modCorr.h
DetectAndLocalize/include/pcl/registration/impl/: correspondence_estimation_mod.hpp  correspondence_rejection_color_appearance.cpp  correspondence_rejection_self_occluded_normal.cpp  registration_mod.hpp
DetectAndLocalize/src/: datagrabber.cpp  extractsurf.cpp  geometry.cpp  miscellaneous.cpp  objectsegmentationplane.cpp  processingpcd.cpp  regmeshpcd.cpp  rosinterface.cpp  segmentationregiongrow.cpp
DetectAndLocalizeNew/3DModel/: drillNewModelOrigin.pcd  randomModelAxisAlignedOrigin.vtk
DetectAndLocalizeNew/include/: datagrabber.h  geometry.h  miscellaneous.h  poseestimator.h  processingpcd.h  regmeshpcd.h  rosinterface.h
DetectAndLocalizeNew/include/pcl/: _DS_Store
DetectAndLocalizeNew/include/pcl/registration/impl/: correspondence_rejection_self_occluded_normal.hpp  icp_mod.hpp
DetectAndLocalizeNew/src/: kinectgrabber.cpp  main.cpp  poseestimator.cpp
